# M2

./: .gitignore  .gitmodules  README.md
.github/workflows/: check-maths-docs.yml  format-maths-docs-markdown.yml  mathtools_tests.yml  welcome.yml
bayesian_stats/: TP1.ipynb  TP2_acceptation_rejet.ipynb
data_science_practice/1_git_&github/: NOTES.md  TOC.md
data_science_practice/1_git_&github/2_math_docs/: README.md
data_science_practice/2_python_environment/2_unit_tests_&_CI/mathtools/: pyproject.toml
data_science_practice/2_python_environment/2_unit_tests_&_CI/mathtools/mathtools/: calculator.py  cli.py
data_science_practice/3_data_science_methodology/: 0_EDA.ipynb
data_science_practice/5_data_preprocessing/: module5_exercise.ipynb
data_science_practice/7_images/: module7_exercise0.ipynb
data_science_practice/9_RL/: 0_intro.ipynb  1_QLearning.ipynb
differential_privacy/TP1/: Practical-Session-Privacy-Preserving-ML-2025-1-Etudiant.ipynb  pima.csv
medical/: introduction_to_ner.ipynb
medical/model_rule_based/: config.cfg  tokenizer
python_for_deep_learning/: exercise1.ipynb  exercise2.ipynb
python_for_deep_learning/class2/: exercise1.ipynb  exercise2.ipynb
pytorch_for_deep_learning/1-Foundations/: 3-IntroMLP.ipynb
pytorch_for_deep_learning/2-AutomaticDifferentiation/: 1-autograd.ipynb  3-GradientFlow.ipynb
pytorch_for_deep_learning/3-NNTrainingAndMonitoring/: 0-TrainingBasics.ipynb  1-DataPipeline&TrainingLoop.ipynb  best_model.pth
statistical_learning/: 1-LDA_logistic_boosting_student.ipynb  utils.py
(+3 files in other folders)
